--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - numpy=1.15.4
   - cftime=1.0.1
   - python-stratify=0.1
-  - sphinx
+  - sphinx=3.2.1
   - pytest
   - pytest-cov
   - codacy-coverage
